correcting the sections heading for readability

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@ body {
     color: #3b4754;
 }
 
-/* ad logo style to creation food  */
+/* home page  */
 h1 {
     font: Source Code Pro, Poppins;
     letter-spacing: normal;
@@ -28,41 +28,31 @@ h1 {
     margin-left: 60px;
     color: #000000;
 }
-
-/* add style to navigation button */
 #menu {
     font-size: 95%;
     color: #181d22;
     margin-right: 60px;
 }
-
 #menu li {
     float: right;
     list-style-type: none;
     margin: 30px;
 }
-
 #menu a {
     text-decoration: none;
     color: inherit;
 }
-
 #menu a:hover {
     border-left: 1px solid #312d2d;
 }
-
 .active {
     border-left: 1px solid #312d2d;
 }
-
-/* add style to background image */
-
 #trans {
     background-color: rgb(14, 13, 13, 0.6);
     height: 670px;
     width: 1335px;
 }
-
 #dish-photo {
     height: 670px;
     width: 1335px;
@@ -73,15 +63,11 @@ h1 {
     overflow: hidden;
     position:relative;
 }
-
-/* add style to the title  */
-
 div #main-title {
     position: absolute;
     left: 300px;
     top: 100px;
 }
-
 #main-title,
 #main-title h1 {
     font-size: 72px;
@@ -90,7 +76,6 @@ div #main-title {
     text-align: center;
     padding: 0 auto;
 }
-
 #main-title,
 #main-title h2 {
     font-size: 30px;
@@ -99,10 +84,7 @@ div #main-title {
     text-align: center;
     margin: 0 auto;
     line-height: 50px;
-
 }
-
-/* all style to the enter button */
 #enter-button {
     background-color: #181d22;
     text-align: center;
@@ -116,18 +98,15 @@ div #main-title {
     left: 400px;
     font-weight: bold;
 }
-
 #enter-button,
 a {
     text-decoration: none;
     color: white;
 }
-
 #enter-button,
 a:hover {
     color: #c3f7c6
 }
-
 #about {
     background-color: rgba(102, 92, 1, 0.349);
     width: 240px;
@@ -139,7 +118,6 @@ a:hover {
     right: 50px;
     bottom: -300px;
 }
-
 #about h1 {
     color: white;
     font-weight: bold;
@@ -148,7 +126,6 @@ a:hover {
     font-family: Source Code Pro, Poppins;
     position: abosolute;
     line-height: 30px;
-
 }
 
 #about p {
@@ -157,11 +134,9 @@ a:hover {
     font-family: Poppins, Source Code Pro;
     text-align: left;
 }
-
 footer {
     height: 800px;
 }
-
 #social-media {
     position: fixed;
     bottom: 0;
@@ -171,13 +146,11 @@ footer {
     background-color: white;
     text-align: center;
 }
-
 #social-media>li {
     display: inline-block;
     width: 70px;
     height: 3px;
 }
-
 #social-media i {
     font-size: 100%;
     color: #767c6b;
@@ -185,11 +158,10 @@ footer {
     margin: 20px;
     text-align: center;
 }
-
-section {
+/* gallery page */
+#gallery {
     height: 20px;
 }
-
 #g-title>h1 {
     font-size: 20px;
     clear: both;
@@ -198,13 +170,11 @@ section {
     text-transform: uppercase;
     color: #312d2d
 }
-
 #g-title>h2 {
     font-size: 12px;
     text-align: center;
     font-weight: bold;
 }
-
 #photo-gallery {
     clear: both;
     line-height: 0;
@@ -215,7 +185,6 @@ section {
     border-radius: 10px;
     position: absolute;
 }
-
 #photo-gallery img {
     height: 280px;
     width: 240px;
@@ -226,7 +195,6 @@ section {
     float: inline-end;
     text-align: right;
 }
-
 #photo-gallery figcaption {
     font-size: 14px;
     font-weight: 800;
@@ -236,7 +204,7 @@ section {
     padding: 5px;
     caption-side: bottom;
 }
-/* Contact section */
+/* Contact page */
 #judges {
     clear: both;
     column-count: 2;
@@ -250,7 +218,6 @@ section {
     top: 100px;
     display: inline-block;
 }
-
 #judges>h1 {
     text-align: center;
     font-size: 15px;
@@ -258,14 +225,12 @@ section {
     color: #312d2d;
     margin-top: 30px;
 }
-
 #judges img {
     height: auto;
     width: 50%;
     padding: 50px 2px 5px 60px;
     overflow: auto;
 }
-
 #c-form {
     clear: both;
     overflow: auto;
@@ -280,7 +245,6 @@ section {
     margin: 0;
     padding: 20px 0 20px 20px;
 }
-
 #c-form h1 {
     text-align: center;
     padding: 5px 30px 40px 0;
@@ -289,17 +253,14 @@ section {
     color: #312d2d;
     margin-top: 3px;
 }
-
 #c-form ul {
     padding: 0px 5px 0 0;
 }
-
 #c-form li {
     list-style: none;
     padding: 20px 20px 0 0;
     font-size: 14px;
 }
-
 #c-form input {
     border: 1px solid #c9d3dd;
     padding: 20px 20px 0 0;
@@ -314,23 +275,19 @@ section {
     padding: 20px 20px 0 0;
     box-sizing: border-box;
 }
-
 .radio-button #terms>label {
     font: 10px;
 }
-
 .radio-button .terms {
     width: 12px;
     height: 12px;
     font: 10px;
 }
-
 #c-form label {
     display: block;
     height: 10px;
     text-align: left;
 }
-
 .submit-b button {
     border-radius: 5px;
     padding: 5px;
@@ -363,10 +320,9 @@ section {
     text-align: center;
     font-size: 20px;
     text-transform: uppercase;
-
 }
 /* media queries */ 
-/* iPhone 4 and 4S */
+/* iPhone 4 */
 @media only screen and (max-width: 320px) {
 #dish-photo{
     background-size: cover;
